--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
     "webpack": "^1.12.8",
     "webpack-dev-server": "^1.12.1"
+  },
+  "dependencies": {
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3"
   }
 }
