--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "material-ui": "^0.13.3",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "react-tap-event-plugin": "^0.2.1"
   }
 }
