--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "flux": "^2.1.1",
     "jquery": "^2.1.4",
+    "object-assign": "^4.0.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "semantic-ui": "^2.1.6"
