--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
-    "flux": "^2.1.1",
+    "alt": "^0.17.9",
     "jquery": "^2.1.4",
+    "lodash": "^3.10.1",
+    "moment": "^2.10.6",
     "object-assign": "^4.0.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
