--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "jquery": "^2.1.4",
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
-    "object-assign": "^4.0.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-semantify": "^0.4.1",
     "semantic-ui": "^2.1.6"
   }
 }
